2007-04-12  Francis Kung  <fkung@redhat.com>

	PR 31539
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkFontPeer.c
	(ft2_map): New static variable.
	(Java_gnu_java_awt_peer_gtk_GdkFontPeer_initStaticState): Set up ft2_map.
	(Java_gnu_java_awt_peer_gtk_GdkFontPeer_setFont): Use cached ft2_map.

2007-04-12  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkClipboard.c
	(clipboard_get_func): Call DeleteLocalRef.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkSelection.c
	(clipboard_targets_received): Likewise.
	(clipboard_uris_received): Likewise.

2007-04-12  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* LICENSE: Added m4/ax_func_which_gethostbyname_r.m4 license.
	* configure.ac: Added AX_FUNC_WHICH_GETHOSTBYNAME_R check.
	* m4/ax_func_which_gethostbyname_r.m4: New file.
	* native/jni/native-lib/cpnet.c (cpnet_getHostByName): Check for
	different number of arguments of gethostbyname_r.

2007-04-12  Mark Wielaard  <mark@klomp.org>

	* gnu/java/awt/peer/ClasspathFontPeer.java (LRUCache): New static
	inner class.
	(transCache): New static LRUChache field.
	(copyTransformToAttrs): Check whether a TransformAttribute already
	exists in the transCache for the given AffineTransform.

2007-04-12  Mark Wielaard  <mark@klomp.org>

	* configure.ac (COMPILE_GTK_PEER): Add check for cairo >= 1.1.8.

2007-04-11  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* native/jni/java-nio/javanio.c: Include fcntl.h instead of
	sys/fcntl.h.

2007-04-11  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* native/jni/native-lib/cpproc.c (cpproc_forkAndExec): Fixed
	warning on some compilers, e.g. MIPSpro.

2007-04-11  Francis Kung  <fkung@redhat.com>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_FreetypeGlyphVector.c
	(Java_gnu_java_awt_peer_gtk_FreetypeGlyphVector_getGlyphs): Avoid unneeded
	object reference.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkFontPeer.c